--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {   "name": "dox"
   , "description": "Markdown / JSdoc documentation generator"
-  , "version": "0.4.3"
+  , "version": "0.4.3-netdev.1"
   , "author": "TJ Holowaychuk <tj@vision-media.ca>"
   , "repository": { "type": "git", "url": "git://github.com/visionmedia/dox.git" }
+  , "private": false
+  , "publishConfig":{"registry":"http://hmon:5984/registry/_design/app/_rewrite"}
   , "keywords": ["documentation", "docs", "markdown", "jsdoc"]
   , "bin": { "dox": "./bin/dox" }
   , "dependencies": {
